<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tania.activityrectesi.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ok"
        android:visibility="visible"
        android:id="@+id/iv_bandStatOK"
        android:layout_marginStart="16dp"
        android:layout_above="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ok"
        android:visibility="visible"
        android:id="@+id/iv_phoneStatOK"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/iv_bandStatOK" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/ok"
        android:visibility="visible"
        android:id="@+id/iv_beaconStatOK"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/iv_bandStatOK" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:visibility="invisible"
        android:layout_alignTop="@+id/iv_phoneStatOK"
        android:layout_alignStart="@+id/iv_phoneStatOK"
        android:id="@+id/iv_phoneStatNope" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:visibility="invisible"
        android:layout_alignTop="@+id/iv_bandStatOK"
        android:layout_alignStart="@+id/iv_bandStatOK"
        android:id="@+id/iv_bandStatNope" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/iv_beaconStatOK"
        android:layout_alignEnd="@+id/iv_bandStatNope"
        android:id="@+id/iv_BeaconsStatNope" />

    <TextView
        android:text="@string/str_Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        app:srcCompat="@drawable/sfondoapp"
        android:id="@+id/imageView5"
        android:layout_height="375dp"
        android:foregroundGravity="center_vertical"
        android:layout_width="170dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />


    <TextView
        android:text="@string/str_beacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView5"
        android:layout_marginStart="18dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/str_band"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/iv_phoneStatNope"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:text="@string/str_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView4" />

    //image start new session

    //image folder

    //image stop started session

    <TextView
        android:text="Activity Recognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="notRunning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sessionStatus"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <ImageButton
        android:layout_width="60dp"
        app:srcCompat="@drawable/stopses"
        android:id="@+id/ib_stop"
        android:scaleType="fitXY"
        android:visibility="invisible"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/ib_play"
        android:layout_alignEnd="@+id/ib_play"
        android:layout_height="60dp" />

    <ImageButton
        app:srcCompat="@drawable/play"
        android:id="@+id/ib_play"
        android:scaleType="fitXY"
        android:visibility="visible"
        android:background="@android:color/transparent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/ib_folder"
        android:layout_alignEnd="@+id/iv_phoneStatOK"
        android:layout_marginEnd="8dp" />

    <TextView
        android:text="@string/str_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="New Session Info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:text="status: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView3" />

    <ImageButton
        android:layout_width="60dp"
        app:srcCompat="@drawable/folder"
        android:id="@+id/ib_folder"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_marginBottom="21dp"
        android:layout_height="60dp"
        android:layout_above="@+id/textView6"
        android:layout_alignStart="@+id/chronoSession" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronoSession"
        android:layout_above="@+id/ib_folder"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
